add anchor as a replacement for since when query changes
